# ehr-media-intelligence

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: health.py  patients.py  search.py
backend/app/core/: config.py
backend/app/domain/: __init__.py  audit.py  patient.py  record.py
backend/app/fhir/: __init__.py  cli.py  compatibility.py  constants.py  identifiers.py  mapper.py  pipeline.py  references.py  report.py  validator.py
backend/app/ingestion/: __init__.py  cli.py  deduplication.py  errors.py  identity.py  normalizers.py  pipeline.py
backend/app/ingestion/loaders/: __init__.py  base.py  csv_loader.py  (+2 more)
backend/app/persistence/: __init__.py  database.py  models.py
backend/app/search/: __init__.py  cli.py  documents.py  embeddings.py  errors.py  index_store.py  indexer.py  service.py
backend/app/summarization/: __init__.py  cache.py  cache_models.py  cli.py  errors.py  evidence.py  prompt.py  provider.py  quality.py  render.py  service.py  summary.py
backend/tests/: conftest.py  test_cli.py  test_deduplication.py  test_fhir_cli.py  test_fhir_identifiers.py  test_fhir_mapper.py  test_fhir_pipeline.py  test_fhir_validator.py  test_health.py  test_identity.py  test_loaders.py  test_normalizers.py  test_patients_api.py  test_persistence.py  test_pipeline.py  test_search_api.py  test_search_documents.py  test_search_index.py  test_search_service.py  test_summarization_evidence.py  test_summarization_provider.py  test_summarization_service.py  test_summarization_summary.py
(+30 files in other folders)
